rstsr-openblas-ffi/src/cblas.rs

    pub fn cblas_zgeru(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_zgerc(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_strsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f32,
        lda: blas_int,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtrsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f64,
        lda: blas_int,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctrsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztrsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_strmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f32,
        lda: blas_int,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtrmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const f64,
        lda: blas_int,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctrmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztrmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ssyr(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f32,
        X: *const f32,
        incX: blas_int,
        A: *mut f32,
        lda: blas_int,
    );
    pub fn cblas_dsyr(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f64,
        X: *const f64,
        incX: blas_int,
        A: *mut f64,
        lda: blas_int,
    );
    pub fn cblas_cher(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f32,
        X: *const c_void,
        incX: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_zher(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f64,
        X: *const c_void,
        incX: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_ssyr2(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f32,
        X: *const f32,
        incX: blas_int,
        Y: *const f32,
        incY: blas_int,
        A: *mut f32,
        lda: blas_int,
    );
    pub fn cblas_dsyr2(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f64,
        X: *const f64,
        incX: blas_int,
        Y: *const f64,
        incY: blas_int,
        A: *mut f64,
        lda: blas_int,
    );
    pub fn cblas_cher2(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_zher2(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_sgbmv(
        order: CBLAS_ORDER,
        TransA: CBLAS_TRANSPOSE,
        M: blas_int,
        N: blas_int,
        KL: blas_int,
        KU: blas_int,
        alpha: f32,
        A: *const f32,
        lda: blas_int,
        X: *const f32,
        incX: blas_int,
        beta: f32,
        Y: *mut f32,
        incY: blas_int,
    );
    pub fn cblas_dgbmv(
        order: CBLAS_ORDER,
        TransA: CBLAS_TRANSPOSE,
        M: blas_int,
        N: blas_int,
        KL: blas_int,
        KU: blas_int,
        alpha: f64,
        A: *const f64,
        lda: blas_int,
        X: *const f64,
        incX: blas_int,
        beta: f64,
        Y: *mut f64,
        incY: blas_int,
    );
    pub fn cblas_cgbmv(
        order: CBLAS_ORDER,
        TransA: CBLAS_TRANSPOSE,
        M: blas_int,
        N: blas_int,
        KL: blas_int,
        KU: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        X: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        Y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_zgbmv(
        order: CBLAS_ORDER,
        TransA: CBLAS_TRANSPOSE,
        M: blas_int,
        N: blas_int,
        KL: blas_int,
        KU: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        X: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        Y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_ssbmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        K: blas_int,
        alpha: f32,
        A: *const f32,
        lda: blas_int,
        X: *const f32,
        incX: blas_int,
        beta: f32,
        Y: *mut f32,
        incY: blas_int,
    );
    pub fn cblas_dsbmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        K: blas_int,
        alpha: f64,
        A: *const f64,
        lda: blas_int,
        X: *const f64,
        incX: blas_int,
        beta: f64,
        Y: *mut f64,
        incY: blas_int,
    );
    pub fn cblas_stbmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const f32,
        lda: blas_int,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtbmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const f64,
        lda: blas_int,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctbmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztbmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_stbsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const f32,
        lda: blas_int,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtbsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const f64,
        lda: blas_int,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctbsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztbsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        K: blas_int,
        A: *const c_void,
        lda: blas_int,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_stpmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const f32,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtpmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const f64,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctpmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const c_void,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztpmv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const c_void,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_stpsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const f32,
        X: *mut f32,
        incX: blas_int,
    );
    pub fn cblas_dtpsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const f64,
        X: *mut f64,
        incX: blas_int,
    );
    pub fn cblas_ctpsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const c_void,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ztpsv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: blas_int,
        Ap: *const c_void,
        X: *mut c_void,
        incX: blas_int,
    );
    pub fn cblas_ssymv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f32,
        A: *const f32,
        lda: blas_int,
        X: *const f32,
        incX: blas_int,
        beta: f32,
        Y: *mut f32,
        incY: blas_int,
    );
    pub fn cblas_dsymv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: f64,
        A: *const f64,
        lda: blas_int,
        X: *const f64,
        incX: blas_int,
        beta: f64,
        Y: *mut f64,
        incY: blas_int,
    );
    pub fn cblas_chemv(
        order: CBLAS_ORDER,
        Uplo: CBLAS_UPLO,
        N: blas_int,
        alpha: *const c_void,
        A: *const c_void,
        lda: blas_int,
        X: *const c_void,
        incX: blas_int,
        beta: *const c_void,
        Y: *mut c_void,
        incY: blas_int,
    );
